--- a/example_applications/emptyExample/package.json
+++ b/example_applications/emptyExample/package.json
@@ -28,7 +28,8 @@
     "@react-native/eslint-config": "0.74.84",
     "@react-native/metro-config": "^0.74.85",
     "@react-native/typescript-config": "0.74.84",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
@@ -36,7 +37,7 @@
     "metro-config": "^0.80.9",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
