--- a/example_applications/emptyExample/tsconfig.json
+++ b/example_applications/emptyExample/tsconfig.json
@@ -7,7 +7,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
   },
   "include": ["./App.tsx"],
   "exclude": ["node_modules"]
