--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "paho-mqtt": "^1.1.0",
-    "react-native": "^0.74.3",
-    "react-native-ble-plx": "^3.2.0",
-    "react-native-device-info": "^11.1.0",
-    "react-native-sqlite-storage": "^6.0.1",
     "text-encoding": "^0.7.0",
     "typescript": "^4.9.5"
   },
@@ -26,13 +22,20 @@
     "@types/lodash": "^4.17.5",
     "@types/node": "^16.18.101",
     "@types/paho-mqtt": "^1.0.10",
-    "@types/react": "^18.3.3",
-    "@types/react-native": "^0.73.0",
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/text-encoding": "^0.0.39",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
     "add-shebang": "^0.1.0",
     "jest": "^29.7.0",
     "patch-package": "^8.0.0",
     "ts-jest": "^29.1.5"
-  }
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-native": "^0.64.0 || ^0.65.0 || ^0.66.0 || ^0.67.0 || ^0.68.0 || ^0.69.0 || ^0.70.0 || ^0.71.0 || ^0.72.0 || ^0.73.0 || ^0.74.0",
+    "react-native-ble-plx": "^3.2.0",
+    "react-native-device-info": "^11.1.0",
+    "react-native-sqlite-storage": "^6.0.1"
+    }
 }
