Full support for Led configuration including BLE service, Ring class, Ring context, and local storage. Added a new example with improved responsiveness for data streaming

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# Node modules
-node_modules/
+# Node modules anywhere in the repository
+**/node_modules/
+
+# iOS / CocoaPods
+**/ios/Pods/
 
 # TypeScript
 *.tsbuildinfo
